segunda modificacion del proyecto backend

--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "homepage": "https://github.com/cardozoismael/proyect-backend#readme",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "standard": "^17.1.2"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
